@@ -1,3 +1,10 @@
+2011-01-25  Yao Qi  <yao@codesourcery.com>
+
+        PR target/45701
+        * gcc.target/arm/pr45701-1.c: New test.
+        * gcc.target/arm/pr45701-2.c: New test.
+	* gcc.target/arm/pr45701-3.c: New test.
+
 2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>
 	    Jakub Jelinek  <jakub@redhat.com>
 
